--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ wgpu = "0.19.1"
 env_logger = "0.11.0"
 log = "0.4.20"
 pollster = "0.3.0"
+
+[profile.dev]
+opt-level = 1
+debug = 0
+
+[profile.release]
+panic = 'abort'
