--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ wgpu = "0.19.1"
 env_logger = "0.11.0"
 log = "0.4.20"
 pollster = "0.3.0"
+bytemuck = { version = "1.14.3", features = ["derive"] }
 
 [profile.dev]
 opt-level = 1
