--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,12 @@ env_logger = "0.11.0"
 log = "0.4.20"
 pollster = "0.3.0"
 bytemuck = { version = "1.14.3", features = ["derive"] }
+anyhow = "1.0.80"
+
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
 
 [profile.dev]
 opt-level = 1
