--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log = "0.4.20"
 pollster = "0.3.0"
 bytemuck = { version = "1.14.3", features = ["derive"] }
 anyhow = "1.0.80"
+cgmath = "0.18.0"
 
 [dependencies.image]
 version = "0.24"
