--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ pollster = "0.3.0"
 bytemuck = { version = "1.14.3", features = ["derive"] }
 anyhow = "1.0.80"
 cgmath = "0.18.0"
+glyphon = "0.5.0"
 
 [dependencies.image]
 version = "0.24"
